cache/app/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: samples-app-cache
  labels:
    name: samples-app-cache
